Thu Mar  4 09:31:48 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/CoherentWriter/Sender/CoherentWrite_Test_Sender_exec.cpp:
          Set is_coherent_write to true.

        * connectors/dds4ccm/tests/PSLDeadline/Receiver/PSL_DeadlineTest_Receiver_exec.cpp:
          Resolve compile issue.

Thu Mar  4 09:21:49 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/dds4ccm/performance-tests/Latency/Base/Latency_Test_Base.idl:
        * connectors/dds4ccm/performance-tests/Latency/descriptors/Plan.cdp:
        * connectors/dds4ccm/performance-tests/Latency/descriptors/Plan_pub.cdp:
        * connectors/dds4ccm/performance-tests/Latency/descriptors/Plan_sub.cdp:
        * connectors/dds4ccm/performance-tests/Latency/descriptors/README:
        * connectors/dds4ccm/performance-tests/Latency/descriptors/run_pub.pl:
        * connectors/dds4ccm/performance-tests/Latency/descriptors/run_sub.pl:
        * connectors/dds4ccm/performance-tests/Latency/descriptors/USER_QOS_PROFILES.xml:
        * connectors/dds4ccm/performance-tests/Latency/Receiver/Latency_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/performance-tests/Latency/Sender/Latency_Test_Sender.idl:
        * connectors/dds4ccm/performance-tests/Latency/Sender/Latency_Test_Sender_exec.cpp:
        * connectors/dds4ccm/performance-tests/Latency/Sender/Latency_Test_Sender_exec.h:
        Add statistics, use only fixed size elements in topic and clean up code.


Thu Mar  4 09:06:49 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * bin/ciao_tests.lst:
        * connectors/dds4ccm/tests/CoherentWriter:
          Added coherent writer test.

Thu Mar  4 08:55:49 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/dds/ndds/TimeUtilities.h:
          Added.

Thu Mar  4 08:53:03 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/TimeConversion/time_conversion.cpp:
          Resolved compile issue.
