@@ -6,7 +6,7 @@
 #include "ciao/Logger/Log_Macros.h"
 #include "tao/ORB_Core.h"
 #include "ace/OS_NS_time.h"
-#include "dds4ccm/impl/dds/TimeUtilities.h"
+#include "dds4ccm/impl/dds/ndds/TimeUtilities.h"
 
 namespace CIAO_Keyed_Test_Receiver_Impl
 {
